# atproto-bot

./: .gitignore  README.md  TODO.md  WEBHOOK_SETUP_NEXT_STEPS.md  config.example.yaml  pyproject.toml
.github/workflows/: deploy.yml
deploy/: setup-remote.sh
deploy/nginx/: atproto-bot-webhook  atproto-bot-webhook.conf
src/: __init__.py  agent.py  atproto_client.py  bot.py  command_router.py  config.py  llm_handler.py  main.py  webhook_server.py
src/orm/: __init__.py  base.py  conversation.py  pr_comment.py  pr_iteration.py  processed_dm.py  processed_mention.py  rate_limit.py  selfimprovement_request.py  tool_execution.py
src/services/: __init__.py  code_analysis_service.py  conversation_service.py  database.py  dm_service.py  git_service.py  github_service.py  mention_service.py  pr_improvement_service.py  rate_limit_service.py  selfimprovement_service.py  tool_service.py  webhook_handler.py
src/tools/: __init__.py  calculator.py  log_search.py  systemd_logs.py  web_search.py  wikipedia.py
systemd/: atproto-bot.service
tests/: __init__.py  test_command_router.py
