[project]
name = "atproto-bot"
version = "0.1.0"
description = "An ATproto/Bluesky bot with LangChain LLM integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.55",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "duckduckgo-search>=6.0.0",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
atproto-bot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
